--- a/Week1/index.html
+++ b/Week1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alex Cancelliere | Personal Landing Page</title>
+  <title>Alex Cancelliere | This Is My Personal Landing Page</title>
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
