--- a/Module3/public/about.html
+++ b/Module3/public/about.html
@@ -8,19 +8,16 @@
 </head>
 <body>
 
-<header>
-    <h1>About This Application</h1>
-</header>
-
-<nav>
+ <nav>
     <a href="index.html">Home</a>
     <a href="contact.html">Contact</a>
 </nav>
 
-<div class="content">
-    <p>This application was built using Node.js and Express.</p>
-    <p>It demonstrates how to create and handle multiple routes.</p>
-</div>
+<header>
+    <h1>This is a simple Express application for learning purposes.
+</h1>
+</header>
+
 
 </body>
 </html>
