--- a/Module3/public/index.html
+++ b/Module3/public/index.html
@@ -8,20 +8,16 @@
 </head>
 <body>
 
-<header>
-    <h1>Welcome to My Application</h1>
-</header>
-
 <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
 </nav>
 
-<div class="content">
-    <p>This is the homepage of our Express application.</p>
-    <p>Explore the About and Contact pages to learn more.</p>
-</div>
+<header>
+    <h1>Welcome to My Express App!</h1>
+</header>
+
 
 </body>
 </html>
