--- a/Module3/public/contact.html
+++ b/Module3/public/contact.html
@@ -4,28 +4,53 @@
     <meta charset="UTF-8">
     <title>Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-<header>
-    <h1>Contact Us</h1>
-</header>
 
 <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
 </nav>
 
+<header>
+    <h1>Contact Me</h1>
+</header>
+
 <div class="content">
-    <p>If you would like to get in touch, reach out through one of the methods below:</p>
+    <form id="contactForm">
+        
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" required><br><br>
+
+        <label for="message">Reason for Contact:</label><br>
+        <textarea id="message" rows="4" required></textarea><br><br>
+
+        <button type="submit">Submit</button>
+
+    </form>
 
     <div class="contact-info">
-        <p>Email: example@email.com</p>
-        <p>Instagram: @myapplication</p>
-        <p>Twitter: @myapplication</p>
+        <p>Email: gacance@pointpark.edu</p>
+        <p>Phone: (412) 315-1011</p>
     </div>
 </div>
+
+<script>
+    document.getElementById("contactForm").addEventListener("submit", function(event) {
+        event.preventDefault(); // Prevent page reload
+
+        const name = document.getElementById("name").value;
+        const message = document.getElementById("message").value;
+
+        alert(`Thank you, ${name}! We have received your message: ${message}.`);
+
+        this.reset(); // Clear form after submission
+    });
+</script>
 
 </body>
 </html>
